feat: implement single-thread execution pipeline for atomic GPU task management and add core translation and processing use cases